--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     },
     "extends": [
       "plugin:vue/essential",
+      "plugin:prettier/recommended",
       "eslint:recommended",
       "@vue/typescript/recommended",
       "@vue/prettier",
